# payroll

./: .copier-answers.yml  README.md
hr_master_data/: README.rst  __manifest__.py
hr_master_data/data/: demo_data.xml
hr_master_data/models/: __init__.py  hr_contract.py  hr_data_group.py  hr_data_type.py  hr_data_type_value.py  hr_data_value_reason.py  hr_employee_data_value.py
hr_master_data/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
hr_master_data/security/: hr_payroll_security.xml  ir.model.access.csv
hr_master_data/views/: hr_contract_value_views.xml  hr_contract_views.xml  hr_data_value_views.xml
hr_payroll_period/: README.rst  __manifest__.py
hr_payroll_period/data/: date_range_type.xml  ir_cron.xml  ir_sequence_data.xml
hr_payroll_period/i18n/: hr_payroll_period.pot
hr_payroll_period/models/: date_range_type.py  hr_fiscal_year.py  hr_payslip.py  hr_payslip_employees.py  hr_payslip_run.py  hr_period.py
hr_payroll_period/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md  ROADMAP.md  USAGE.md
hr_payroll_period/security/: hr_period_security.xml
hr_payroll_period/tests/: test_hr_fiscalyear.py  test_payslip.py
hr_payroll_period/views/: date_range_type_view.xml  hr_fiscalyear_view.xml  hr_payslip_run_view.xml  (+3 more)
payroll/: README.rst  __manifest__.py
payroll_account/: README.rst  __manifest__.py
payroll_hr_public_holidays/: README.rst  __manifest__.py
payroll_rule_history/: README.rst  __manifest__.py
payroll_salary_table/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+153 files in other folders)
