[project]
name = "odoo-addons-oca-payroll"
version = "17.0.20250105.0"
dependencies = [
    "odoo-addon-payroll>=17.0dev,<17.1dev",
    "odoo-addon-payroll_hr_public_holidays>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
